--- a/index.html
+++ b/index.html
@@ -182,6 +182,21 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                             <table style=" height: 437px;" border="0">
                               <tbody>
                                 <tr>
+								<td id="TWLVE" align="center">
+It is with heavy hearts that we say goodbye to our dear Friends of Hart Park volunteer, 
+director, <i>Hart of the Matter</i> editor, Silents Under the Stars chairman, and friend, 
+Elliott McGrew.
+<img src="images/ElinorAndElliott.png"</img>  
+Please send a prayer/good thoughts for his wife Elinor and their family.
+								</td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></b></i></td>
+                                </tr>
                                   <td style=" height: 279px;" id="NEWS2">
                                         <p align="center"> <iframe
 src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThe-Friends-of-Hart-Park%2F171859949545623&amp;width=292&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=true&amp;header=true&amp;height=427"
@@ -192,81 +207,6 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                             frameborder="0"
                                             scrolling="no"></iframe> </p>
                                   </td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></b></i></td>
-                                </tr>
-								<td align="center"><h2>
-Click on the images below to see photos from 2013's<br>
-<b>Silents Under the Stars!</b></h2>
-<a href="images/silents2013/silents000.JPG" rel="lightbox[silents2013]" title="FOHP President Laurene Weste &amp; long-time resident Tom Frew">
-<img src="images/silents2013/thumbs/silents000.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents001.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents001.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents002.JPG" rel="lightbox[silents2013]" title="FOHP President &amp; Santa Clarita Mayor Pro Tem Laurene Weste">
-	<img src="images/silents2013/thumbs/silents002.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents003.JPG" rel="lightbox[silents2013]" title="Nadia Littlewarrior, Norm Phillips &amp; Laurene Weste">
-	<img src="images/silents2013/thumbs/silents003.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents004.JPG" rel="lightbox[silents2013]" title="Hunting wasps, prior to the event!">
-	<img src="images/silents2013/thumbs/silents004.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents005.JPG" rel="lightbox[silents2013]" title="An evening of lights!">
-	<img src="images/silents2013/thumbs/silents005.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents006.JPG" rel="lightbox[silents2013]" title="Projectionist and film historian David Shepard with Roger Basham">
-	<img src="images/silents2013/thumbs/silents006.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents007.JPG" rel="lightbox[silents2013]" title="Authors Kimi &amp; E.J. Stephens and JohnBoston">
-	<img src="images/silents2013/thumbs/silents007.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents008.JPG" rel="lightbox[silents2013]" title="Authors thinking deep thoughts">
-	<img src="images/silents2013/thumbs/silents008.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents009.JPG" rel="lightbox[silents2013]" title="Bill Blowers &amp; FOHP Treasurer Cindy Beals">
-	<img src="images/silents2013/thumbs/silents009.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents010.JPG" rel="lightbox[silents2013]" title="Frank Hoffman provides rides to the mansion">
-	<img src="images/silents2013/thumbs/silents010.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents011.JPG" rel="lightbox[silents2013]" title="Tom Frew with FOHP board members Sheila Miller &amp; Sherron Blowers">
-	<img src="images/silents2013/thumbs/silents011.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents012.JPG" rel="lightbox[silents2013]" title="Belly up to the bar with Volunteer President Bob Hill">
-	<img src="images/silents2013/thumbs/silents012.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents013.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents013.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents014.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents014.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents015.JPG" rel="lightbox[silents2013]" title="Music provided by The All Digital String Band">
-	<img src="images/silents2013/thumbs/silents015.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents016.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents016.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents017.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents017.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents018.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents018.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents019.JPG" rel="lightbox[silents2013]" title="Authors E.J. &amp; Kimi Stephens signing books">
-	<img src="images/silents2013/thumbs/silents019.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents020.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents020.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents021.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents021.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents022.JPG" rel="lightbox[silents2013]" title="Movie accompaniment provided by Ray Lowe">
-	<img src="images/silents2013/thumbs/silents022.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents023.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents023.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents024.JPG" rel="lightbox[silents2013]" title="Dinnertime music by The All Digital String Band">
-	<img src="images/silents2013/thumbs/silents024.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents025.JPG" rel="lightbox[silents2013]" title="FOHP Board Members Becki Basham &amp; Nadiya Littlewarrior">
-	<img src="images/silents2013/thumbs/silents025.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents026.JPG" rel="lightbox[silents2013]" title="L.A. County Park Event Coordinator Al Ewing">
-	<img src="images/silents2013/thumbs/silents026.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents027.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents027.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents028.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents028.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents029.JPG" rel="lightbox[silents2013]" title="Entertaining historical perspective by writer John  Boston">
-	<img src="images/silents2013/thumbs/silents029.JPG" alt="2013 Silents Under the Stars"/></a>
-<a href="images/silents2013/silents030.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
-	<img src="images/silents2013/thumbs/silents030.JPG" alt="2013 Silents Under the Stars"/></a>
-
-								</td>
                                 </tr>
                                 <tr>
                                 <tr>
@@ -298,7 +238,7 @@ Click on the images below to see photos from 2013's<br>
                           <td align="center" valign="top" width="557">
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
-                                <h2>2013 Calendar of Events</h2>
+                                <h2>2014 Calendar of Events</h2>
                                 <h4>Click on each event for details, as
                                 they become available.</h4><br>
                                 <table style="text-align: left; width:
@@ -306,12 +246,12 @@ Click on the images below to see photos from 2013's<br>
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Dec. 14<sup>th</sup>
+                                      <td id="EventDate">Apr. 24-26, 2014
                                       </td>
                                       <td id="Event">
-<a href="Event_Pages/DayAtTheRanchChumash.png" rel="lightbox[dayAtTheRanch]" title="Kid's Day At The Ranch &mdash; The Chumash">
-									  Kids Day at the Ranch &mdash; The Chumash
-</a>
+									  Stay tuned for Hart Park-based events at<br>
+									  <a target="_blank" href="http://cowboyfestival.org">
+									  <h3>Cowboy Festival 2013</h3></a>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -319,41 +259,12 @@ Click on the images below to see photos from 2013's<br>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<h2>Thanks to all who made it to...</h2>
-<img src="Event_Pages/CowboysCarols-2013.jpg"/>
+<h2>Thanks to all who made it to<br>
+<a href="Event_Pages/CowboysCarols2013-DaveStamey.jpg" rel="lightbox[CowboysCarols]" title="2013 Cowboys &amp; Carols">Cowboys and Carols
+<img src="Event_Pages/CowboysCarols2013-DaveStamey-sm.jpg"/>
+</a>
 <h2>... and Happy Holidays from the Friends of Hart Park!</h2>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<h3>Click below to see photos from 2013's<br>
-Friends of Hart Park Volunteer Recognition Dinner</h3>
-<h4>Featuring a tribute to former board member, volunteer, newsletter editor and friend</h4>
-<h1>Elliott McGrew</h1>
-<a href="images/VolunteerRecognition2013/volunteers2013.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
-<img src="images/VolunteerRecognition2013/thumbs/volunteers2013.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
-<a href="images/VolunteerRecognition2013/volunteers2013-000.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
-<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-000.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
-<a href="images/VolunteerRecognition2013/volunteers2013-001.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
-<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-001.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
-<a href="images/VolunteerRecognition2013/volunteers2013-002.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
-<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-002.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
-<a href="images/VolunteerRecognition2013/volunteers2013-004.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
-<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-004.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
-<a href="images/VolunteerRecognition2013/volunteers2013-005.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
-<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-005.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
-<a href="images/VolunteerRecognition2013/volunteers2013-007.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
-<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-007.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
-<a href="images/VolunteerRecognition2013/volunteers2013-008.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
-<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-008.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
-<a href="images/VolunteerRecognition2013/volunteers2013-009.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
-<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-009.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<h3>Click <a href="Event_Pages/cowboyfest.html">here</a> 
-to see pictures from the Hart Park events at the </h3>
-<a href="Event_Pages/cowboyfest.html"><img src="Event_Pages/RidersInTheSky.jpg"/></a>
-<h2>20<sup>th</sup> Annual Cowboy Festival</h2>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
                         </tr>
                       </tbody>
                     </table>
