--- a/index.html
+++ b/index.html
@@ -183,6 +183,21 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                               <tbody>
                                 <tr>
 								<td id="TWLVE" align="center">
+And now we have to say goodbye to another dear Friend of Hart.  Liz Crowl, the wife of 55 years
+of longtime volunteer, director, another <i>Hart of the Matter</i> editor, Bill Crowl.  Liz passed away
+on January 17<sup>th</sup>.<br><br>
+Please send a prayer/good thoughts for Bill Crowl and family during this difficult time.
+								</td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></b></i></td>
+                                </tr>
+                                <tr>
+								<td id="TWLVE" align="center">
 It is with heavy hearts that we say goodbye to our dear Friends of Hart Park volunteer, 
 director, <i>Hart of the Matter</i> editor, Silents Under the Stars chairman, and friend, 
 Elliott McGrew.
@@ -263,7 +278,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
 <a href="Event_Pages/CowboysCarols2013-DaveStamey.jpg" rel="lightbox[CowboysCarols]" title="2013 Cowboys &amp; Carols">Cowboys and Carols
 <img src="Event_Pages/CowboysCarols2013-DaveStamey-sm.jpg"/>
 </a>
-<h2>... and Happy Holidays from the Friends of Hart Park!</h2>
+<h2>... and Happy 2014 from the Friends of Hart Park!</h2>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                         </tr>
                       </tbody>
