Updated Liz Crowl blurb.

--- a/index.htm
+++ b/index.htm
@@ -184,7 +184,8 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                                 <tr>
 								<td id="TWLVE" align="center">
 And now we have to say goodbye to another dear Friend of Hart.  Liz Crowl, the wife of 55 years
-of longtime volunteer, director, another <i>Hart of the Matter</i> editor, Bill Crowl.  Liz passed away
+of longtime volunteer, director, another <i>Hart of the Matter</i> editor, and former President of the 
+Friends of Hart Park, Mr. Bill Crowl.  Liz passed away
 on January 17<sup>th</sup>.<br><br>
 Please send a prayer/good thoughts for Bill Crowl and family during this difficult time.
 								</td>
