--- a/index.htm
+++ b/index.htm
@@ -186,7 +186,8 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
 And now we have to say goodbye to another dear Friend of Hart.  Liz Crowl, the wife of 55 years
 of longtime volunteer, director, another <i>Hart of the Matter</i> editor, and former President of the 
 Friends of Hart Park, Mr. Bill Crowl.  Liz passed away
-on January 17<sup>th</sup>.<br><br>
+on January 17<sup>th</sup>.<br>
+<img src="images/LizAndBill.png" alt="Liz and Bill" /><br>
 Please send a prayer/good thoughts for Bill Crowl and family during this difficult time.
 								</td>
                                 </tr>
