Updated the PayPal buttons to new account with Cindy's (treasurer@friendsofhartpark.org) email.

--- a/index.htm
+++ b/index.htm
@@ -240,9 +240,9 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   align="center"> <font color="#008000"
                                     size="4">Donations may be made by
                                     clicking the donate button here:</font></p>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="SR3NVYHWN8WDL">
+<input type="hidden" name="hosted_button_id" value="55SB5RTHRZ34E">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
