Cowboy Festival 2014, with new image slider.

--- a/index.htm
+++ b/index.htm
@@ -266,9 +266,9 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       <td id="EventDate">Apr. 24-26, 2014
                                       </td>
                                       <td id="Event">
-									  Stay tuned for Hart Park-based events at<br>
-									  <a target="_blank" href="http://cowboyfestival.org">
-									  <h3>Cowboy Festival 2013</h3></a>
+									  Click here for a round-up of the Hart Park-based events at the<br>
+									  <a href="Event_Pages/cowboyfest.html">
+									  <h3>Cowboy Festival 2014</h3></a>
                                       </td>
                                     </tr>
                                   </tbody>
