Removed EJ and Kimi's film tour events as some felt they conflict with ours.

--- a/Event_Pages/cowboyfest.html
+++ b/Event_Pages/cowboyfest.html
@@ -196,17 +196,6 @@ This year, the Hart will feature more Cowboy Festival activities than ever befor
     
       <div id="carousel">
         <div class="carousel-feature">
-          <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/EJandKimi.jpg"></a>
-          <div class="carousel-caption">
-            <p>
-			Kim and E.J. Stephens
-            </p>
-            <p class="markcowboyfest">
-			Thursday morning, Friday morning &amp; afternoon
-            </p>
-          </div>
-        </div>
-        <div class="carousel-feature">
           <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/WyattAndTerryEarp.jpg"></a>
           <div class="carousel-caption">
             <p>
@@ -214,6 +203,17 @@ This year, the Hart will feature more Cowboy Festival activities than ever befor
             </p>
             <p class="markcowboyfest">
 			Thursday evening
+            </p>
+          </div>
+        </div>
+        <div class="carousel-feature">
+          <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/EJandKimi.jpg"></a>
+          <div class="carousel-caption">
+            <p>
+			Kim and E.J. Stephens
+            </p>
+            <p class="markcowboyfest">
+			Friday morning
             </p>
           </div>
         </div>
@@ -280,11 +280,6 @@ This year, the Hart will feature more Cowboy Festival activities than ever befor
 <h1 class="cowboyfest">
 Thursday, April 24<sup>th</sup>
 </h1>
-<h2 class="cowboyfest">Morning: Western Film Tour - part 1</h2>
-<p class="cowboyfest">
-Departing from Hart Park will be an informative and entertaining tour of local Santa Clarita Valley film sites!  Not only cowboy films, but also get a chance to see the last location of the last movie of the silent era, the Charlie Chaplin comedy Classic <i>Modern Times</i>.  The tour is led by Friends of Hart Park board member, &ldquo;<i>SCV In The Movies</i>&rdquo; co-host, and film historian E.J. Stephens, along with his wife, author Kim Stephens.
-
-</p>
 <h2 class="cowboyfest">Evening: Mr. and Mrs. Wyatt Earp play</h2>
 <p class="cowboyfest">
 Meet and enjoy the real life Earp relatives as they perform their highly acclaimed, award winning play based on the true life stories of what happened in Tombstone and Wyatt and Josie&rsquo;s volatile relationship. Enjoy this amazing opportunity in the former living room of local cowboy/actor William S. Hart.
@@ -294,12 +289,7 @@ Friday, April 25<sup>th</sup>
 </h1>
 <h2 class="cowboyfest">Morning: Walk of Western Star and William S. Hart museum and grounds Walking Tour</h2>
 <p class="cowboyfest">
-Start out in Hart Hall on the grounds of William S. Hart Park for a guided tour of old town Newhall&rsquo;s <em>Walk of Western Stars</em>.  Then enjoy an extensive tour of the grounds of William S. Hart&rsquo;s property, incuding his mansion, the ranch house where he lived before the mansion was built, and the surrounding grounds.  Top off the experience with lunch and a classic William S. Hart movie!
-
-</p>
-<h2 class="cowboyfest">Afternoon:  Western Film Tour - part 2</h2>
-<p class="cowboyfest">
-Again, join local film experts Kim and E.J. Stephens at Hart Park, where they lead you further afield to historical sites and movie locations not far from Santa Clarita.  Film and local history come alive when this friendly and informative couple tells you the stories behind the old west (both real and portrayed) in our area.
+Start out in Hart Hall on the grounds of William S. Hart Park for a guided tour of old town Newhall&rsquo;s <em>Walk of Western Stars</em>.  Your guides will be author, film historian and <i>SCV In The Movies</i> co-host E.J. Stephens along with his wife, author Kim Stephens.  Following that, enjoy an extensive tour of the grounds of William S. Hart&rsquo;s property, incuding his mansion, the ranch house where he lived before the mansion was built, and the surrounding grounds.  Top off the experience with lunch and a classic William S. Hart movie!
 
 </p>
 <h2 class="cowboyfest">Evening:  "Growing Up With Roy Rogers And Dale Evans&ldquo;</h2>
