Added Nadiya's e-mail address.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -415,11 +415,12 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                             </dd>
 										  <dt>Vendor info</dt>
                                           <dd>Nadiya Littlewarrior<br>
-                                              (661) 298-3014</dd>
+                                              (661) 298-3014<br>
+                                               kiwenkikwe@yahoo.com</dd>
                                         </b>
                                       </dl>
                                       <br>
-                                      &nbsp;<img
+                                      &nbsp;<img align="right"
                                         src="../ADs/theFriends.gif"
                                         border="0" height="126"
                                         width="115"> </div>
