Added Pacific Islander Festival website.  Also, updated main page to point to it.  Also, removed Liz Crowl and Elliott McGrew.

--- a/index.htm
+++ b/index.htm
@@ -181,39 +181,6 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                             width="324">
                             <table style=" height: 437px;" border="0">
                               <tbody>
-                                <tr>
-								<td id="TWLVE" align="center">
-And now we have to say goodbye to another dear Friend of Hart.  Liz Crowl, the wife of 55 years
-of longtime volunteer, director, another <i>Hart of the Matter</i> editor, and former President of the 
-Friends of Hart Park, Mr. Bill Crowl.  Liz passed away
-on January 17<sup>th</sup>.<br>
-<img src="images/LizAndBill.png" alt="Liz and Bill" /><br>
-Please send a prayer/good thoughts for Bill Crowl and family during this difficult time.
-								</td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></b></i></td>
-                                </tr>
-                                <tr>
-								<td id="TWLVE" align="center">
-It is with heavy hearts that we say goodbye to our dear Friends of Hart Park volunteer, 
-director, <i>Hart of the Matter</i> editor, Silents Under the Stars chairman, and friend, 
-Elliott McGrew.
-<img src="images/ElinorAndElliott.png"</img>  
-Please send a prayer/good thoughts for his wife Elinor and their family.
-								</td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></b></i></td>
-                                </tr>
                                   <td style=" height: 279px;" id="NEWS2">
                                         <p align="center"> <iframe
 src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThe-Friends-of-Hart-Park%2F171859949545623&amp;width=292&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=true&amp;header=true&amp;height=427"
@@ -271,16 +238,25 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
 									  <h3>Cowboy Festival 2014</h3></a>
                                       </td>
                                     </tr>
+                                    <tr>
+                                      <td id="EventDate">May. 10, 2014
+                                      </td>
+                                      <td id="Event">
+									  Santa Clarita Valley<br>
+									  <a href="Event_Pages/pacific.html">
+									  <h3>Pacific Islander Festival</h3></a>
+                                      </td>
+                                    </tr>
                                   </tbody>
                                 </table>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<h2>Thanks to all who made it to<br>
-<a href="Event_Pages/CowboysCarols2013-DaveStamey.jpg" rel="lightbox[CowboysCarols]" title="2013 Cowboys &amp; Carols">Cowboys and Carols
-<img src="Event_Pages/CowboysCarols2013-DaveStamey-sm.jpg"/>
+<h2>Be sure and join us for the Hart Park-based events at this year's<br>
+<a href="Event_Pages/cowboyfest.html" title="2014 Cowboys Festival">Cowboys Festival
+<img src="images/yum.jpg"/>
 </a>
-<h2>... and Happy 2014 from the Friends of Hart Park!</h2>
+<h2>Get your tickets from <a target="_blank" href="http://www.cowboyfestival.org">cowboyfestival.org</a></h2>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                         </tr>
                       </tbody>
