--- a/index.html
+++ b/index.html
@@ -253,9 +253,8 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
 <h2>Be sure and join us for the Hart Park-based events at this year's<br>
-<a href="Event_Pages/cowboyfest.html" title="2014 Cowboys Festival">Cowboys Festival
-<img src="images/yum.jpg"/>
-</a>
+<a href="Event_Pages/cowboyfest.html" title="2014 Cowboys Festival">Cowboys Festival</a>
+<iframe width="501" height="282" src="http://www.youtube.com/embed/0HynYVV7oqM?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 <h2>Get your tickets from <a target="_blank" href="http://www.cowboyfestival.org">cowboyfestival.org</a></h2>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                         </tr>
