--- a/index.html
+++ b/index.html
@@ -247,6 +247,12 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
 									  <h3>Pacific Islander Festival</h3></a>
                                       </td>
                                     </tr>
+                                    <tr>
+                                      <td id="EventDate">Aug. 9, 2014</td>
+                                      <td id="Event">Mark your Calendars for<br>
+                                      <h3>Silents Under the Stars</h3>
+                                      and stay tuned for further details!</td>
+                                    </tr>
                                   </tbody>
                                 </table>
                                     <p style="margin-top: 7px;
