--- a/index.html
+++ b/index.html
@@ -230,21 +230,24 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Apr. 24-26, 2014
-                                      </td>
-                                      <td id="Event">
-									  Click here for a round-up of the Hart Park-based events at the<br>
-									  <a href="Event_Pages/cowboyfest.html">
-									  <h3>Cowboy Festival 2014</h3></a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">May. 10, 2014
                                       </td>
                                       <td id="Event">
 									  Santa Clarita Valley<br>
 									  <a href="Event_Pages/pacific.html">
 									  <h3>Pacific Islander Festival</h3></a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">May 15, 2014
+                                      </td>
+                                      <td id="Event">
+									  Friends Of Hart Park Invite You To<br>
+                                      RESPECT * HONOR * REMEMBER<br>
+                                      <a href="Event_Pages/policeevent.jpg" 
+                                      rel="lightbox[police]" 
+                                      title="National Peace Officers Memorial Day">
+                                      <h3>National Peace Officers Memorial Day</h3></a>
                                       </td>
                                     </tr>
                                     <tr>
@@ -258,10 +261,35 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<h2>Be sure and join us for the Hart Park-based events at this year's<br>
-<a href="Event_Pages/cowboyfest.html" title="2014 Cowboys Festival">Cowboys Festival</a>
-<iframe width="501" height="282" src="http://www.youtube.com/embed/0HynYVV7oqM?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
-<h2>Get your tickets from <a target="_blank" href="http://www.cowboyfestival.org">cowboyfestival.org</a></h2>
+
+<h2>You are invited...</h2>
+<a href="Event_Pages/policeevent.jpg" 
+rel="lightbox[police2]" 
+title="National Peace Officers Memorial Day">
+<img src="Event_Pages/police.jpg"/></a></p>
+<p class="lots">to join the Friends of Hart Park for an evening dedicated to the legacy and
+work of our peace officers on 
+<a href="Event_Pages/policeevent.jpg" 
+rel="lightbox[police3]" 
+title="National Peace Officers Memorial Day">
+<b>National Peace Officers Memorial Day</b>
+</a>
+, Thursday, <b>May 15<sup>th</sup> at 7pm</b>. Open <b>free</b> to the 
+public, this special evening takes place <b>at Hart Hall</b> on the grounds of the William S. Hart County Park. 
+<p class="lots">The program includes short talks by distinguished authors J.R.Sanders, Sven Crongeyer, Tom Hays and Art 
+Sjoquist, who will speak on the subjects of Old West lawmen, and the histories of the early Los Angeles 
+Sheriff's Department and the Los Angeles Police Department. Bud Bradshaw, author of Brandishing, will speak 
+on the legacy of the "Newhall Incident" and pay tribute to officers James "Skip" Pence, Roger Gore, Walt 
+Frago and George "Mike" Alleyn. A Special tribute to Deputy Sheriff Arthur E. Pelino, concludes the live 
+presentation part of the evening. Audience and presenters are invited to enjoy a time of Fellowship immediately 
+following the program. Live music throughout the evening is provided by John Bergstrom, Gency Brown, and 
+Jason "Buck" Corbett, members of the Western Music Association California Chapter.</p>
+<p class="lots">This event is FREE to the public and is made possible through the generous contributions of Friends of Hart
+Park, Western Music Association, and OutWest Boutique and Cultural Center. <i>Special thanks to Rachel Barnes,
+Norm Phillips, J.R. Sanders, Roger Palmer, and Gordon Graham.</i></p>
+<p class="lots"><b>For further event information, please contact the William S. Hart Museum office at (661) 254-4584 or Bobbi 
+Jean Bell, OutWest, (661) 255-7087.</b></p>
+</h4>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                         </tr>
                       </tbody>
