Removed the words "Petting Zoo", per Norm.

--- a/Zoo/animals.html
+++ b/Zoo/animals.html
@@ -59,7 +59,7 @@ function MM_swapImage() { //v3.0
 				<TR>
 					<TD width="50">&nbsp;</TD>
 					<TD width="896">
-					<div align="center" class="TTL">Petting Zoo</div>
+					<div align="center" class="TTL">Hart Park's Animals</div>
 					</TD>
 					<TD width="50" valign="bottom">
 					<IMG border="0" src="../Misc/images/spacer.gif" width="2" height="40">
